Fixed error messsage on collapsed screen

--- a/src/app/pages/analyses/analyses.component.css
+++ b/src/app/pages/analyses/analyses.component.css
@@ -474,3 +474,7 @@
 .form-field30 {
   padding-left: 10px;
 }
+
+.margin-bottom {
+  margin-bottom: 4vh;
+}
